# CurseForgeAPy

./: .gitignore  CFAPI.py  CurseForgeAPy-cache.sqlite  LICENSE.md  README.md  SchemaClasses.py  main.py  pyproject.toml
src/CurseForgeAPy/: CFAPI.py  SchemaClasses.py  Utils.py  __init__.py
src/CurseforgeAPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
