[project]
name = "CurseforgeAPy"
version = "1.0.2"
authors = [
  { name="James O'Grady", email="jamesmoose2854@gmail.com" },
]
description = "A wrapper for the Eternal (CurseForge) API"
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "requests>=2.26.0",
  "jsonpickle>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/James2854/CurseforgeAPy"
"Bug Tracker" = "https://github.com/James2854/CurseforgeAPy/issues"
"Documentation" = "https://docs.curseforge.com/"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"