[project]
name = "CurseForgeAPy"
version = "1.0.4"
authors = [
  { name="James O'Grady", email="jamesmoose2854@gmail.com" },
]
description = "A wrapper for the Eternal (CurseForge) API"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["Minecraft", "Curseforge", "Eternal", "API", "Wrapper"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
  "requests>=2.26.0",
  "jsonpickle>=3.0.0",
]

[project.urls]
"Repository" = "https://github.com/James2854/CurseforgeAPy"
"Bug Tracker" = "https://github.com/James2854/CurseforgeAPy/issues"
"Documentation" = "https://docs.curseforge.com/"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"